# customer-tools

./: .gitignore  .travis.yml
ETL/: dynamodb-etl.sh  dynamodb-s3-dump.sh  stringToJson.sh  woocommerce-etl.sh
ETL/t/: aws.sh  dynamodb-etl.t  helper.sh  osht.sh  stringToJson.t
apps/dynamodb-etl/: .gitignore  Cargo.toml  build.rs  wrapper.h
apps/dynamodb-etl/src/: errors.rs  json_queries.rs  main.rs
scripts/: build.sh
