[package]
name = "dynamodb-etl"
version = "0.1.0"
authors = ["Daniel Sobral <dcsobral@slamdata.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.10.1"
flate2 = "1.0.9"
error-chain = "0.12.1"
structopt = "0.2.18"

# DOES NOT WORK: see https://github.com/rust-lang/cargo/issues/1197
# Requires environment variables JQ_LIB_DIR and ONIG_LIB_DIR
# To statically link those libraries, JQ_LIB_STATIC and ONIG_LIB_STATIC
[target.'cfg(not(target_os = "linux"))'.dependencies]
jq-rs = { version = "0.4.1" }

# Define JQ_NO_STATIC to dynamically link jq
[target.'cfg(target_os = "linux")'.dependencies]
jq-rs = { version = "0.4.0", features = ["bundled"] }

# TODO: cargo bundle

[dev-dependencies]
assert_matches = "1.3.0"